@@ -1,0 +1,2 @@
+Implements an S3 class for storing and formatting time-of-day values,
+based on the 'difftime' class.
