@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3126 2019/07/31 13:55:05 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3127 2019/07/31 13:56:46 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5083,3 +5083,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Added textproc/R-readr version 1.3.1 [brook 2019-07-31]
 	Added textproc/R-readstata13 version 0.9.2 [brook 2019-07-31]
 	Added textproc/R-readxl version 1.3.1 [brook 2019-07-31]
+	Added time/R-hms version 0.5.0 [brook 2019-07-31]
